Finished getHistory() for now until desired json object list is determined